Build image carousel

--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="carousel">
+        <img src="https://scontent.fcgy1-3.fna.fbcdn.net/v/t39.30808-6/471127867_9335698929814364_1428284166322928916_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeEPqF9WCSr4gv-jtgbMFs8l9Fdf3rJW0bz0V1_eslbRvEWXmjNowvF2p7StiSu3kz2mrm5qPSWwKhQWm7deoOW8&_nc_ohc=HE6F8VvzIoIQ7kNvgFQ03Q7&_nc_zt=23&_nc_ht=scontent.fcgy1-3.fna&_nc_gid=A0bG32wUk6Sao4sWlqRVsqL&oh=00_AYDY3e3ZX0pZVEQKWQRsCqJPcfdcQZNSf-Kqagull4XOrQ&oe=67858BB9" alt="img1">
+        <img src="https://scontent.fcgy1-1.fna.fbcdn.net/v/t39.30808-6/470177631_462531590207835_7905649667662846257_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeEzsSn02DLRbbgzK5A9lhy5HB10pcCZL1IcHXSlwJkvUlhJXjz2LWRK7wp3ysMpkE8kpwwE1nsrkNlV8Vh9Rpey&_nc_ohc=9P3p6KArDtUQ7kNvgFK9dKj&_nc_zt=23&_nc_ht=scontent.fcgy1-1.fna&_nc_gid=A_Ou4fJ0FLOSfb1P16xEfsO&oh=00_AYBLLggqVJM6ZlrM2ch20x8AQzqO_qswx6ZqYDHcx-ZPLQ&oe=678579F1" alt="img2">
+        <img src="https://scontent.fcgy1-3.fna.fbcdn.net/v/t39.30808-6/461317342_1301691917933041_5999911053313257736_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=86c6b0&_nc_eui2=AeGdASXQ50qEoFolXwiqzHMiz0-_qovTZf3PT7-qi9Nl_Se2-EVH7wGt3r3hhy183PSja2Y55TFTaptw-KMgeoPP&_nc_ohc=2wKL12HRbwoQ7kNvgEzalUG&_nc_zt=23&_nc_ht=scontent.fcgy1-3.fna&_nc_gid=Afn2XRBTIxDNyrjeAmAT2qv&oh=00_AYAS8u-98J_rgixxpWo1jAhIAPcgWxwzjIN53MomhJg7kA&oe=6785A322" alt="img3">
+    </div>
+    <button class="left">&#10094</button>
+    <button class="right">&#10095</button>
+    <div class="dots">
+        <span class="dot active"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
 </body>
 </html>
